Begin converting the app from mongo to sqlalchemy

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
-	<p>log in</p>
-	<form action="/login" method="POST">
+	<p>Sign up</p>
+	<form action="/signup" method="POST">
 		<input type="text" name="email" placeholder="email"/>
 		<input type="password" name="password" placeholder="password"/>
 		<input type="submit" value="Submit"/>
