Begin adding research paper functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,9 @@
 		<link rel="stylesheet" type="text/css" href="{{ static_url("css/style.css") }}"/>
 
 		<!-- JS -->
-
+		<script src="http://code.jquery.com/jquery-2.1.0.min.js" charset="utf-8"></script>
+		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js" charset="utf-8"></script>
 	</head>
 	<body>
 		{% block content %}
