--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,12 +1,41 @@
-#controls {
+#controls, #papers {
 	width: 960px;
 	margin: 0px auto;
 }
 
-#search, #create{
+#search, #create {
 	position: relative;
 	display: inline-block;
 	width: 40%;
 	margin: 4%;
 	vertical-align: top;
+}
+
+#papers {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;	
+}
+
+.paper {
+	flex-basis: 30%;
+	height: 200px;
+	border: 1px solid beige;
+	margin: 1.5%;
+}
+
+.paper .abstract {
+	display: none;
+}
+
+input[type='text'] {
+	width: 100%;
+	height: 30px;
+	margin-bottom: 5px
+}
+
+textarea {
+	width: 100%;
+	height: 60px;
+	margin-bottom: 5px
 }
