--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html> 
 <html>
 	<head>
-
 		<title>Phronesis</title>
 
 		<!-- META -->
@@ -15,6 +14,7 @@
 		<script src="http://code.jquery.com/jquery-2.1.0.min.js" charset="utf-8"></script>
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js" charset="utf-8"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.4/handlebars.min.js" charset="utf-8"></script>
 	</head>
 	<body>
 		{% block content %}
