--- a/templates/research-papers.html
+++ b/templates/research-papers.html
@@ -5,6 +5,7 @@
 		<h3>Search for Papers</h3>
 		<input class="title" type="text" name="title" placeholder="title"/>
 		<input class="keywords" type="text" name="keywords" placeholder="keywords"/>
+		<input class="adjectives" type="text" name="adjectives" placeholder="phronesis adjectives"/>
 		<input class="favorite" type="checkbox" name="favorite"/> Favorite
 	</div>
 	<div id="create">
@@ -12,11 +13,14 @@
 		<input class="title" type="text" name="title" placeholder="title"/>
 		<input class="url" type="text" name="url" placeholder="url"/>
 		<input class="keywords" type="text" name="keywords" placeholder="keywords"/>
+		<input class="adjectives" type="text" name="adjectives" placeholder="phronesis adjectives"/>
 		<input class="note" type="text" name="note" placeholder="note"/>
 		<textarea class="abstract" type="text" name="abstract">Abstract</textarea>
 		<input class="favorite" type="checkbox" name="favorite"/>Favorite
 		<input type="submit"/>
 	</div>
 </div>
+<div id="papers"></div>
 <script type="text/javascript" src="{{ static_url("js/research.js") }}"></script>
+<script type="text/html" src="{{ static_url("js/templates/papers.handlebars") }}"></script>
 {% end %}
