--- a/templates/research-papers.html
+++ b/templates/research-papers.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
+<div id="research_nav">
+	<ul class="horizontal-list">
+		<li class="active" id="search">search</li>
+		<li id="create">create</li>		
+	</ul>
+</div>
 <div id="controls">
 	<div id="search">
 		<h3>Search for Papers</h3>
