--- a/static/js/templates/brain-exercises.handlebars
+++ b/static/js/templates/brain-exercises.handlebars
@@ -1,5 +1,5 @@
 <script id="brain_exercises_template" type="text/x-handlebars-template">
-	<table id="games">
+	<table class="records-table exercises">
 		<tr>
 			<th>Remove</th>
 			<th>Game</th>
