--- a/static/js/templates/braingames.handlebars
+++ b/static/js/templates/braingames.handlebars
@@ -1,5 +1,5 @@
 <script id="brain_games_template" type="text/x-handlebars-template">
-	<table id="games">
+	<table class="records-table games hidden" id="games">
 		<tr>
 			<th>Remove</th>
 			<th>Game</th>
