--- a/templates/brain-training.html
+++ b/templates/brain-training.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="brain_nav">
 	<ul class="horizontal-list">
-		<li class="active" id="exercises">Exercises</li>
+		<li class="border" id="exercises">Exercises</li>
 		<li id="games">Games</li>		
 	</ul>
 </div>
