Add active class to games

--- a/templates/brain-training.html
+++ b/templates/brain-training.html
@@ -7,7 +7,7 @@
 	</ul>
 </div>
 <div id="controls">
-	<div id="create" class="exercises">
+	<div id="create" class="active exercises">
 		<h3>Create New Exercise Record</h3>
 		<div class="create-form">
 			<input class="game" type="text" name="game" placeholder="game"/>
