Add datetime picker to stimulants page.

--- a/templates/stimulants.html
+++ b/templates/stimulants.html
@@ -5,8 +5,9 @@
 		<h3>Create Stimulant Record</h3>
 		<div class="create-form">
 			<input class="stimulant" type="text" name="stimulant" placeholder="stimulant"/>
-			<input class="amount" type="text" name="amount" placeholder="amount"/>
+			<input class="amount" type="text" name="amount" placeholder="amount"/>			
 			<input class="unit" type="text" name="unit" placeholder="unit"/>
+			<input class="datetime" type="datetime-local" name="datetime" placeholder="date and time"/>
 			<input type="submit"/>
 		</div>
 	</div>
