Update research nav funcationality.  Change paper styling.

--- a/static/js/templates/papers.handlebars
+++ b/static/js/templates/papers.handlebars
@@ -26,7 +26,7 @@
 		</div>
 		<div class="section abstract">
 			<h5>Abstract</h5>
-			<p class="abstract-text hidden">{{this.abstract}}</p>
+			<p class="abstract-text">{{this.abstract}}</p>
 		</div>
   	</div>
   	{{/each}}
