--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,10 +34,10 @@
 }
 
 .paper {
-	border: 1px solid beige;
-	flex-basis: 42%;
+	border: 1px solid gray;
+	flex-basis: 100%;
 	/*height: 200px;*/
-	margin: 1.5%;
+	margin: 10px 0px;
 	padding: 10px;
 }
 
