--- a/static/css/style.css
+++ b/static/css/style.css
@@ -88,6 +88,37 @@
 	cursor: pointer;
 }
 
+#foods_munge_container{
+	height: 100%;
+	width: 100%;
+}
+
+#food_photos_container {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;	
+}
+
+.food {
+	/*flex-basis: 30%;*/
+	border-radius:5px;
+	box-shadow: 0px 0px 10px 2px #ccc;
+	margin: 10px;
+	padding: 0px;
+}
+
+#food_photos_container .food img {	
+	width: 180px;
+	border-radius:5px 5px 0px 0px;
+}
+/*, #fitbit_foods*/
+#flickr_photos { 
+	display: inline-block;
+	height: 100%;
+	position: relative;
+	width: 100%
+}
+
 input[type='text'] {
 	width: 100%;
 	height: 30px;
